# GoAround

./: .gitignore  readme.md
backend/: Dockerfile  README.md  RESTful API Specs.md  main.py  pyproject.toml  run.py
backend/app/: crud.py  main.py  models.py  schemas.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 13161609b814_add_post_and_reply_likes_tables.py  166f4b799a2b_initial_schema.py  296eec12c278_.py  66e79fc17114_.py  6d5515e9776c_.py  84ced92766e8_add_verification_status_and_created_at_.py  91f7c3e07305_.py  b359e922889a_update_place_models_with_cafe_and_fix_.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: admin.py  forum.py  lists.py  places.py  private.py  reviews.py  trips.py  users.py  utils.py
backend/app/core/: config.py  db.py  security.py
backend/app/service/: __init__.py  admin_service.py  ai_service.py  forum_service.py  place_service.py  review_service.py  saved_list_service.py  search_service.py  trip_service.py  user_service.py  utils.py
backend/tests/: conftest.py
backend/tests/api/routes/: test_private.py  test_utils.py
docs/: RESTful API Documentation.md  Test_Cases_Create_Place.md
frontend/: AUTHENTICATION_WORKFLOW.md  QUICK_START.md  THEME_FINAL_SUMMARY.md  THEME_SETUP.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/: Footer.vue  Header.vue  HelloWorld.vue  SearchBar.vue
frontend/src/composables/: index.ts  useAdmin.ts  useAuthGuard.ts  useForumMain.ts  useForumPost.ts  useGenerateTrip.ts  useHeader.ts  (+17 more)
(+190 files in other folders)
